# django-cookiecutter

./: .gitignore  README.md
_cookiecutter/: manage.py  pyproject.toml
_cookiecutter/_cookiecutter/: asgi.py  settings.py  urls.py  wsgi.py
_cookiecutter/app1/: models.py  serializers.py  urls.py  views.py
_cookiecutter/app1/migrations/: 0001_initial.py
