[tool.poetry]
name = "django-cook"
version = "0.1.0"
description = ""
authors = ["Mohammad Noroozi <mm.74noroozi@gmail.com>"]
readme = "README.md"
packages = [{include = "django-cook"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
django-rest-framework = "^0.1.0"
drf-nested-routers = "^0.93.4"
django-filter = "^23.3"
coverage = "^7.3.2"
python-jose = "^3.3.0"
PyJWT = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
